@@ -74,7 +74,8 @@ class Polygon<2>
   // Descriptive characteristics
 
   int numCorners() const {return m_points.size();}
-  Point<2> getCorner(int i) const {return m_points[i];}
+  Point<2> getCorner(int i) const
+	{assert(i >= 0 && ((unsigned int) i) < m_points.size()); return m_points[i];}
   Point<2> getCenter() const {return Barycenter(m_points);}
 
   // For a Polygon<2>, addCorner() and moveCorner() always succeed.
@@ -267,7 +268,8 @@ class Polygon
   // Descriptive characteristics
 
   int numCorners() const {return m_poly.numCorners();}
-  Point<dim> getCorner(int i) const {return m_orient.convert(m_poly[i]);}
+  Point<dim> getCorner(int i) const
+	{assert(i >= 0 && i < m_poly.numCorners()); return m_orient.convert(m_poly[i]);}
   Point<dim> getCenter() const {return m_orient.convert(m_poly.getCenter());}
 
   // The failure of the following functions does not invalidate the
