@@ -1,5 +1,11 @@
 Tuesday, February 12, 2002	Ron Steinke <rsteinke@w-link.net>
 
+	* Changed Point<>:origin() to Point<>::setToOrigin()
+	* Added assert() checks on array indices passed to
+	  many functions
+
+Tuesday, February 12, 2002	Ron Steinke <rsteinke@w-link.net>
+
 	* Added Equal() template to call foo->isEqualTo().
 	* Replaced "const CoordType&" with CoordType everywhere it
 	  was used.
